--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -113,3 +113,33 @@
         margin-left: 0px !important;
     }
 }
+.undo-alert {
+    border-radius: 8px;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .undo-btn {
+    background-color: transparent;
+    border: 1px solid #333;
+    padding: 6px 12px;
+    border-radius: 6px;
+  }
+  
+  .undo-btn:hover {
+    background-color: #ff9366;
+    color: white;
+    border-color: #ff9366;
+  }
+  .full-screen-container {
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    background-color: #FEFAE0;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  
